# amimori

./: CLAUDE.md  Cargo.nix  Cargo.toml  build.rs  crate-hashes.json  flake.nix  result
docs/: architecture.md  competitive.md  data-model.md  roadmap.md
locks/: aarch64-darwin.json
module/: default.nix
module/darwin/: default.nix
module/nixos/: default.nix
proto/: amimori.proto
src/: config.rs  convergence.rs  daemon.rs  enrichment.rs  error.rs  event_bus.rs  export.rs  grpc.rs  main.rs  mcp.rs  model.rs  platform.rs  state.rs  topology.rs  traits.rs
src/collector/: arp.rs  arp_scan.rs  banner.rs  dns.rs  interface.rs  lldp.rs  mdns.rs  mod.rs  netbios.rs  passive.rs  scanner.rs  ssdp.rs  tls.rs  wifi.rs
src/db/: mod.rs
src/db/entity/: event.rs  host.rs  interface.rs  mod.rs  network.rs  service.rs  wifi_network.rs
src/db/migration/: m20250101_000001_create_tables.rs  m20250313_000002_add_network_id.rs  m20250314_000003_create_event_log.rs  m20250315_000004_host_document.rs  m20250315_000005_interface_wifi_documents.rs  m20250316_000006_create_networks.rs  mod.rs
